test/LitTests/Parser/Namespace/RCurlyBracketTerminatingGlobalNamespace.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// CHECK: .loci:5:1: error: Expected 'END'; got 'RCURLYBRACKET'.
}
